--- a/styles/app.css
+++ b/styles/app.css
@@ -11,6 +11,7 @@
 @import "react-lazy-load-image-component/src/effects/blur.css";
 @import "../app/components/lfm/lfm.css";
 @import "../app/components/cards/things-i-love/horizontal-card.css";
+@import "../app/components/blog/tutorialContent/resource/tutorialResource.css";
 
 .root,
 :root,
