--- a/styles/app.css
+++ b/styles/app.css
@@ -179,19 +179,27 @@ button {
     border-width: 3px;
   }
   .input-basic {
-    @apply text-neutral-500 bg-neutral-100 outline-none border-0 py-4 px-5 rounded-lg w-full mb-4 ring-offset-white ring-offset-4 transform transition-all;
+    @apply text-grey-700 bg-sage-100 outline-none border-0 py-4 px-5 rounded-lg w-full mb-4 ring-offset-white ring-offset-4 transform transition-all;
+
+    &.input-basic-reverse {
+      @apply bg-white text-sage-700 ring-offset-sage-100;
+    }
   }
 
   .input-success {
-    @apply ring ring-teal-400;
+    @apply ring !ring-sage-500;
   }
 
   .input-error {
-    @apply ring ring-red-500;
+    @apply ring !ring-red-500;
   }
 
   .textarea-basic {
-    @apply text-neutral-500 bg-neutral-100 outline-none border-0 py-4 px-5 rounded-lg w-full;
+    @apply text-grey-600 bg-sage-100 outline-none border-0 py-4 px-5 rounded-lg w-full ring-offset-white ring-offset-4 hover:ring hover:ring-blue-300 transform transition-all;
+
+    &.textarea-basic-reverse {
+      @apply bg-white text-sage-700 ring-offset-sage-100;
+    }
   }
   .embed-responsive {
     position: relative;
