--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -660,7 +660,8 @@ video {
 }
 .btn-outline:hover {
   color: var(--sage-50);
-  background-color: var(--sage-700);
+  background-color: var(--sage-500);
+  border-color: var(--sage-500);
 }
 .btn-outline:active {
     }
@@ -1121,6 +1122,12 @@ video {
 }
 .top-0 {
   top: 0px;
+}
+.bottom-\[-50px\] {
+  bottom: -50px;
+}
+.right-\[10px\] {
+  right: 10px;
 }
 .top-\[-60px\] {
   top: -60px;
@@ -1774,6 +1781,9 @@ video {
 .mb-0 {
   margin-bottom: 0px;
 }
+.ml-6 {
+  margin-left: 1.5rem;
+}
 .mb-2\.5 {
   margin-bottom: 0.625rem;
 }
@@ -1860,9 +1870,6 @@ video {
 }
 .mt-\[3px\] {
   margin-top: 3px;
-}
-.ml-6 {
-  margin-left: 1.5rem;
 }
 .block {
   display: block;
@@ -2206,6 +2213,9 @@ video {
 .w-\[98\.34px\] {
   width: 98.34px;
 }
+.w-\[66px\] {
+  width: 66px;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -2248,8 +2258,8 @@ video {
 .max-w-\[18px\] {
   max-width: 18px;
 }
-.max-w-\[1475px\] {
-  max-width: 1475px;
+.max-w-\[700px\] {
+  max-width: 700px;
 }
 .max-w-\[350px\] {
   max-width: 350px;
@@ -2421,6 +2431,9 @@ video {
 }
 .max-w-\[44px\] {
   max-width: 44px;
+}
+.max-w-\[450px\] {
+  max-width: 450px;
 }
 .max-w-\[31px\] {
   max-width: 31px;
@@ -2907,10 +2920,6 @@ video {
 .rounded-\[6px\] {
   border-radius: 6px;
 }
-.rounded-t-2\.5xl {
-  border-top-left-radius: 1.25rem;
-  border-top-right-radius: 1.25rem;
-}
 .border {
   border-width: 1px;
 }
@@ -3231,9 +3240,6 @@ video {
 .p-4 {
   padding: 1rem;
 }
-.p-7 {
-  padding: 1.75rem;
-}
 .p-5 {
   padding: 1.25rem;
 }
@@ -3263,6 +3269,9 @@ video {
 }
 .p-\[9px\] {
   padding: 9px;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-3 {
   padding-left: 0.75rem;
@@ -3451,9 +3460,6 @@ video {
 }
 .pb-7 {
   padding-bottom: 1.75rem;
-}
-.pl-8 {
-  padding-left: 2rem;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -3763,10 +3769,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(242 192 102 / var(--tw-text-opacity));
 }
-.text-primary-500 {
-  --tw-text-opacity: 1;
-  color: rgb(141 92 92 / var(--tw-text-opacity));
-}
 .text-neutral-800 {
   --tw-text-opacity: 1;
   color: rgb(62 53 58 / var(--tw-text-opacity));
@@ -3846,14 +3848,6 @@ video {
 .text-sage-500 {
   color: var(--sage-500);
 }
-.text-navy-700 {
-  --tw-text-opacity: 1;
-  color: rgb(77 100 141 / var(--tw-text-opacity));
-}
-.text-navy-900 {
-  --tw-text-opacity: 1;
-  color: rgb(30 39 55 / var(--tw-text-opacity));
-}
 .text-navy-50 {
   --tw-text-opacity: 1;
   color: rgb(247 248 250 / var(--tw-text-opacity));
@@ -3861,6 +3855,14 @@ video {
 .text-neutral-50 {
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
+}
+.text-navy-700 {
+  --tw-text-opacity: 1;
+  color: rgb(77 100 141 / var(--tw-text-opacity));
+}
+.text-navy-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 39 55 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -3893,6 +3895,10 @@ video {
 .text-grey-400 {
   --tw-text-opacity: 1;
   color: rgb(157 163 175 / var(--tw-text-opacity));
+}
+.text-primary-500 {
+  --tw-text-opacity: 1;
+  color: rgb(141 92 92 / var(--tw-text-opacity));
 }
 .text-gray-600 {
   --tw-text-opacity: 1;
@@ -4110,6 +4116,9 @@ video {
 .ring-offset-white {
   --tw-ring-offset-color: #fff;
 }
+.ring-offset-sage-100 {
+  --tw-ring-offset-color: var(--sage-100);
+}
 .ring-offset-primary-800 {
   --tw-ring-offset-color: #3c2626;
 }
@@ -4124,9 +4133,6 @@ video {
 }
 .ring-offset-lfm-pink-200 {
   --tw-ring-offset-color: var(--lfm-pink-200);
-}
-.ring-offset-sage-100 {
-  --tw-ring-offset-color: var(--sage-100);
 }
 .blur {
   --tw-blur: blur(8px);
@@ -4945,11 +4951,11 @@ video {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(52 76 76 / var(--tw-ring-opacity));
 }
-.disabled\:bg-sage-100:disabled {
-  background-color: var(--sage-100);
-}
 .disabled\:bg-sage-200:disabled {
   background-color: var(--sage-200);
+}
+.disabled\:bg-sage-100:disabled {
+  background-color: var(--sage-100);
 }
 .disabled\:text-grey-400:disabled {
   --tw-text-opacity: 1;
@@ -5474,11 +5480,11 @@ video {
   .tablet\:ml-4 {
     margin-left: 1rem;
   }
-  .tablet\:mt-96 {
-    margin-top: 24rem;
-  }
   .tablet\:ml-12 {
     margin-left: 3rem;
+  }
+  .tablet\:mt-96 {
+    margin-top: 24rem;
   }
   .tablet\:mr-0 {
     margin-right: 0px;
@@ -5957,6 +5963,10 @@ video {
     padding-left: 0px;
     padding-right: 0px;
   }
+  .tablet\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
   .tablet\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -5996,10 +6006,6 @@ video {
   .tablet\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
-  }
-  .tablet\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
   }
   .tablet\:pr-6 {
     padding-right: 1.5rem;
@@ -6076,13 +6082,13 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
-  .tablet\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
   .tablet\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+  .tablet\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
   .tablet\:text-6xl {
     font-size: 3.75rem;
@@ -6108,6 +6114,9 @@ video {
   }
   .tablet\:leading-4 {
     line-height: 1rem;
+  }
+  .tablet\:leading-\[1\.75rem\] {
+    line-height: 1.75rem;
   }
   .tablet\:leading-7 {
     line-height: 1.75rem;
@@ -7590,6 +7599,9 @@ video {
   .desktop\:max-w-\[550px\] {
     max-width: 550px;
   }
+  .desktop\:max-w-\[1475px\] {
+    max-width: 1475px;
+  }
   .desktop\:max-w-\[652px\] {
     max-width: 652px;
   }
@@ -8503,10 +8515,11 @@ video {
     border-radius: 9999px;
     width: 60px;
     height: 60px;
-    border-width: 1px;
+    border-width: 3px;
+    border-color: var(--sage-200);
     margin-right: 0.75rem;
     --tw-bg-opacity: 1;
-    background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+    background-color: var(--sage-200);
   }
 @media (min-width: 768px) {
 .tr-imageWrapper {
@@ -8519,7 +8532,7 @@ video {
   font-size: 3.75rem /* 60px */;
   line-height: 30px;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
 .tr-index {
     display: flex;
     line-height: 40px;
