--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1465,6 +1465,9 @@ video {
 .left-\[300px\] {
   left: 300px;
 }
+.top-\[-19px\] {
+  top: -19px;
+}
 .z-2 {
   z-index: 2;
 }
@@ -1871,6 +1874,9 @@ video {
 .mt-\[3px\] {
   margin-top: 3px;
 }
+.mb-20 {
+  margin-bottom: 5rem;
+}
 .block {
   display: block;
 }
@@ -2215,6 +2221,9 @@ video {
 }
 .w-\[66px\] {
   width: 66px;
+}
+.w-\[220px\] {
+  width: 220px;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -2667,6 +2676,10 @@ video {
   --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.rotate-\[6deg\] {
+  --tw-rotate: 6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .scale-\[\.81\] {
   --tw-scale-x: .81;
   --tw-scale-y: .81;
@@ -2990,6 +3003,10 @@ video {
 .border-success-400 {
   --tw-border-opacity: 1;
   border-color: rgb(143 177 177 / var(--tw-border-opacity));
+}
+.border-grey-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 247 / var(--tw-border-opacity));
 }
 .bg-primary-100 {
   --tw-bg-opacity: 1;
@@ -4549,6 +4566,9 @@ video {
 .hover\:border-success-600:hover {
   --tw-border-opacity: 1;
   border-color: rgb(79 113 113 / var(--tw-border-opacity));
+}
+.hover\:border-sage-200:hover {
+  border-color: var(--sage-200);
 }
 .hover\:bg-sage-400:hover {
   background-color: var(--sage-400);
@@ -6323,6 +6343,12 @@ video {
   .laptop\:top-\[40px\] {
     top: 40px;
   }
+  .laptop\:left-\[90px\] {
+    left: 90px;
+  }
+  .laptop\:top-\[-30px\] {
+    top: -30px;
+  }
   .laptop\:z-0 {
     z-index: 0;
   }
@@ -6576,6 +6602,9 @@ video {
   }
   .laptop\:ml-\[50px\] {
     margin-left: 50px;
+  }
+  .laptop\:mb-3 {
+    margin-bottom: 0.75rem;
   }
   .laptop\:block {
     display: block;
@@ -6910,6 +6939,10 @@ video {
     -moz-column-gap: 0.25rem;
          column-gap: 0.25rem;
   }
+  .laptop\:gap-x-2 {
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
+  }
   .laptop\:self-auto {
     align-self: auto;
   }
@@ -7030,6 +7063,9 @@ video {
   }
   .laptop\:pb-14 {
     padding-bottom: 3.5rem;
+  }
+  .laptop\:pt-12 {
+    padding-top: 3rem;
   }
   .laptop\:text-left {
     text-align: left;
@@ -7293,6 +7329,12 @@ video {
   .desktop\:col-span-9 {
     grid-column: span 9 / span 9;
   }
+  .desktop\:col-span-10 {
+    grid-column: span 10 / span 10;
+  }
+  .desktop\:col-span-11 {
+    grid-column: span 11 / span 11;
+  }
   .desktop\:col-start-2 {
     grid-column-start: 2;
   }
@@ -7515,6 +7557,9 @@ video {
   .desktop\:flex {
     display: flex;
   }
+  .desktop\:grid {
+    display: grid;
+  }
   .desktop\:hidden {
     display: none;
   }
@@ -7684,6 +7729,9 @@ video {
     --tw-rotate: 130deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+  .desktop\:grid-flow-col {
+    grid-auto-flow: column;
+  }
   .desktop\:grid-cols-desktop {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(30px,102.5px)) minmax(0,1fr);
   }
@@ -7798,6 +7846,9 @@ video {
   .desktop\:pb-32 {
     padding-bottom: 8rem;
   }
+  .desktop\:pb-4 {
+    padding-bottom: 1rem;
+  }
   .desktop\:text-9xl {
     font-size: 8rem;
     line-height: 1;
@@ -7888,6 +7939,18 @@ video {
   }
   .desktopXl\:top-\[100px\] {
     top: 100px;
+  }
+  .desktopXl\:left-\[-100px\] {
+    left: -100px;
+  }
+  .desktopXl\:left-\[-95px\] {
+    left: -95px;
+  }
+  .desktopXl\:left-\[-45px\] {
+    left: -45px;
+  }
+  .desktopXl\:left-\[45px\] {
+    left: 45px;
   }
   .desktopXl\:col-span-4 {
     grid-column: span 4 / span 4;
