--- a/app/components/blog/blog.css
+++ b/app/components/blog/blog.css
@@ -94,3 +94,28 @@
     }
   }
 }
+
+.feature-blog-spacer {
+  @media only screen and (min-width: 768px) {
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background: #ffffff;
+    }
+  }
+  @media only screen and (min-width: 1024px) {
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 0px;
+      background: #ffffff;
+    }
+  }
+}
