--- a/styles/app.css
+++ b/styles/app.css
@@ -46,6 +46,7 @@
   --grey-700: #384050;
   --grey-800: #212837;
   --lfm-pink-200: #fae7e7;
+  --lfm-blue-700: #35546d;
   --nav-top-sm: 68px;
   --nav-top-lg: 76px;
 }
